# MSc_2025

./: .gitignore  stratified_split.json
code/: checker.py  cl_config.yaml  practice.py  requirements.txt  wandb_fix.py
code/binary/: clf_config.yaml  script.py  sweep.py
code/contrastive/: contrastive.py  contrastive_yaml.py
code/multi-class/: metrics_output.xlsx  multi-clf.py  multi_binary-LINUX.py  multi_binary.py  multi_config.yaml
code/utils/: classes.py  helpers.py  train_utils.py
codev2/: binary_tb.py  cl-mstb.py  cl-mstb_quad.py  cl-mstb_v2.py  cl-mstb_with_clf.py  cl-mstb_with_ilo.py  cl-sweep.py  cl.py  cl2.py  cl_sweep.py  cl_with_clf.py  config.yaml  end-end_eval.py  knn.py  sean.py  stratified_split.json  sweep_config.py  tsne.py
codev2/train_utils/: helpers.py
mbod-data-processor/: .gitattributes  .gitignore  README.md  cl.py  config.yaml  data_splits.py  dataloader.py  dataloder.py  generate.py  generate_kaggle.py  hdf_dataset.py  label_consistency.py  multi-clf.py  process_to_benchX.py  pyproject.toml  stratified_split.json  t-sne.py  utils.py  verify.py  visualise.py
mbod-data-processor/train_utils/: classes.py  helpers.py
