[project]
name = "mbod-data-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.12.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pydicom>=3.0.1",
    "pylibjpeg>=2.0.1",
    "pylibjpeg-libjpeg>=2.3.0",
    "python-gdcm>=3.0.24.1",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "torchxrayvision>=0.12.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]
